Add custom CSS styles and improve table cell structure in HTML

--- a/ini's conversion/results-shared-with-comments.html
+++ b/ini's conversion/results-shared-with-comments.html
@@ -191,7 +191,7 @@
                                     <table class="table " id="pc-dt-simple">
                                         <tbody>
                                             <tr data-index="0">
-                                                <td>
+                                                <td class="border-top-0 border-bottom">
                                                     <div class="d-flex gap-3  align-items-center">
                                                         <img src="assets/images/users/comment1.jpeg" alt="user-image" class="object-fit-cover rounded-circle" style="width: 40px; height: 40px;">
                                                         <p class="mt-3">Emerson Passaquindici Arcand</p>
@@ -199,7 +199,7 @@
                                                 </td>
                                             </tr>
                                             <tr data-index="1">
-                                                <td>
+                                                <td class="border-top-0 border-bottom">
                                                     <div class="d-flex gap-3 align-items-center">
                                                         <img src="assets\images\users\comment2.jpeg" alt="user-image" class="object-fit-cover rounded-circle" style="width: 40px; height: 40px;">
                                                         <p class="mt-3">Zain Bator</p>
@@ -207,7 +207,7 @@
                                                 </td>
                                             </tr>
                                             <tr data-index="2">
-                                                <td>
+                                                <td class="border-top-0 border-bottom">
                                                     <div class="d-flex gap-3 align-items-center">
                                                         <div class="d-flex flex-column align-items-center justify-content-center rounded-circle bg-light " style="width: 40px;height: 40px;">
                                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
@@ -231,7 +231,7 @@
                                     <table class="table" id="pc-dt-simple">
                                         <tbody>
                                             <tr data-index="0">
-                                                <td>
+                                                <td class="border-top-0 border-bottom">
                                                     <div class="d-flex gap-3  align-items-center">
                                                         <img src="assets/images/users/comment1.jpeg" alt="user-image" class="object-fit-cover rounded-circle" style="width: 40px; height: 40px;">
                                                         <p class="mt-3 fw-bold">Emerson Passaquindici Arcand</p>
@@ -241,7 +241,7 @@
                                                 </td>
                                             </tr>
                                             <tr data-index="1">
-                                                <td>
+                                                <td class="border-top-0 border-bottom">
                                                     <div class="d-flex gap-3 align-items-center">
                                                         <img src="assets\images\users\adminuser.jpeg" alt="user-image" class="object-fit-cover rounded-circle" style="width: 40px; height: 40px;">
                                                         <p class="mt-3 fw-bold">You</p>
@@ -251,7 +251,7 @@
                                                 </td>
                                             </tr>
                                             <tr data-index="2">
-                                                <td>
+                                                <td class="border-top-0 border-bottom">
                                                     <div class="d-flex gap-3 align-items-center">
                                                         <img src="assets\images\users\comment2.jpeg" alt="user-image" class="object-fit-cover rounded-circle" style="width: 40px; height: 40px;">
                                                         <p class="mt-3 fw-bold">Zain Bator</p>
