--- a/ini's conversion/search-result-list.html
+++ b/ini's conversion/search-result-list.html
@@ -163,20 +163,11 @@
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="#" class="btn-link-secondary" data-bs-toggle="offcanvas"
-                        data-bs-target="#offcanvas_User_info">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                            class="feather feather-list">
-                            <line x1="8" y1="6" x2="21" y2="6"></line>
-                            <line x1="8" y1="12" x2="21" y2="12"></line>
-                            <line x1="8" y1="18" x2="21" y2="18"></line>
-                            <line x1="3" y1="6" x2="3.01" y2="6"></line>
-                            <line x1="3" y1="12" x2="3.01" y2="12"></line>
-                            <line x1="3" y1="18" x2="3.01" y2="18"></line>
-                        </svg>
-                        List View
+                    <a href="#" class="btn-link-secondary" data-bs-toggle="offcanvas" data-bs-target="#offcanvas_User_info">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-grid"><rect x="3" y="3" width="7" height="7"></rect><rect x="14" y="3" width="7" height="7"></rect><rect x="14" y="14" width="7" height="7"></rect><rect x="3" y="14" width="7" height="7"></rect></svg>
+                        Grid View
                     </a>
+                    
                 </li>
                 <li class="list-inline-item">
                     <a href="#" class="btn-link-secondary" data-bs-toggle="offcanvas"
@@ -192,25 +183,42 @@
                 </li>
             </ul>
         </div>
-        <h5 class="h5 mt-2 col d-flex gap-4">
+        <h5 class="h5 mt-2 col d-flex row-gap-3 gap-4 flex-wrap text-md">
             <span>
-                <span class="text-muted">Result For:</span>
+                <span class="text-muted me-2">Result For:</span>
                 <span>Adrian George.jpeg</span>
             </span>
             <span>
-                <span class="text-muted">Search Module:</span>
-                <span>Social Media</span>
+                <span class="text-muted me-2">Search Module:</span>
+                <span>General Information Sources</span>
             </span>
             <span>
-                <span class="text-muted">Sentiment:</span>
+                <span class="text-muted me-2">Location:</span>
+                <span>Lagos, Nigeria</span>
+            </span>
+            <span>
+                <span class="text-muted me-2">Topic:</span>
+                <span>Topic1, Topic 2, Topic3</span>
+            </span>
+            <span>
+                <span class="text-muted me-2">Keywords:</span>
+                <span>Keyword1, Keyword2</span>
+            </span>
+            <span>
+                <span class="text-muted me-2">Hashtags:</span>
+                <span>#tag1, #tag2, #tag3, #tag4</span>
+            </span>
+            <span>
+                <span class="text-muted me-2">Sentiment:</span>
                 <span>Hate</span>
             </span>
         </h5>
+        
         <div class="row mt-5">
             <div class="col-3 border-end">
                 <h5>Filters</h5>
                 <div class="dropdown pc-h-item">
-                    <button class="btn border pc-head-link dropdown-toggle me-0 show" type="button"
+                    <button class="btn border bg-white pc-head-link dropdown-toggle me-0 show" type="button"
                         id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <span class="text-sm">
                             <span class="text-muted">Date Range:</span>
@@ -241,9 +249,9 @@
                         <table class="table table-hover datatable-table" id="pc-dt-simple">
                             <tbody>
                                 <tr data-index="0">
-                                    <td>
+                                    <td class="border-top-0 border-bottom">
                                         <div class="d-flex gap-3 align-items-center">
-                                            <img class="avtar avtar-xl avtar-square"
+                                            <img class="avtar avtar-xl avtar-square border-0 object-fit-cover"
                                                 src="assets\images\users\avatar2.jpeg" alt="Profile Picture">
                                             <div class="pt-3">
                                                 <h6 class="mb-2">Adrain George</h6>
@@ -254,9 +262,9 @@
                                     </td>
                                 </tr>
                                 <tr data-index="1">
-                                    <td>
+                                    <td class="border-top-0 border-bottom">
                                         <div class="d-flex gap-3 align-items-center">
-                                            <img class="avtar avtar-xl avtar-square"
+                                            <img class="avtar avtar-xl avtar-square border-0 object-fit-cover"
                                                 src="assets\images\users\avatar3.jpeg" alt="Profile Picture">
                                             <div class="pt-3">
                                                 <h6 class="mb-2">Adrain George</h6>
