--- a/ini's conversion/social-media.html
+++ b/ini's conversion/social-media.html
@@ -159,13 +159,13 @@
                         <p class="text-sm">Facebook, Twitter</p>
                         <span class="text-sm text-muted">12 Results</span>
                         <div class="user-group d-inline">
-                            <img src="assets\images\users\avatar1.jpeg" alt="user-image" class="avtar"
+                            <img src="assets\images\users\avatar1.jpeg" alt="user-image" class="avtar object-fit-cover"
                                 data-bs-toggle="tooltip" data-bs-title="John Doe">
-                            <img src="assets\images\users\avatar2.jpeg" alt="user-image" class="avtar"
+                            <img src="assets\images\users\avatar2.jpeg" alt="user-image" class="avtar object-fit-cover"
                                 data-bs-toggle="tooltip" data-bs-title="Keefs">
-                            <img src="assets\images\users\avatar3.jpeg" alt="user-image" class="avtar"
+                            <img src="assets\images\users\avatar3.jpeg" alt="user-image" class="avtar object-fit-cover"
                                 data-bs-toggle="tooltip" data-bs-title="Lazaro">
-                            <img src="assets\images\users\avatar4.jpeg" alt="user-image" class="avtar"
+                            <img src="assets\images\users\avatar4.jpeg" alt="user-image" class="avtar object-fit-cover"
                                 data-bs-toggle="tooltip" data-bs-title="Adeline">
                         </div>
                     </div>
@@ -180,9 +180,9 @@
                         <p class="text-sm">Facebook</p>
                         <span class="text-sm text-muted">2 Results</span>
                         <div class="user-group d-inline">
-                            <img src="assets\images\users\avatar2.jpeg" alt="user-image" class="avtar"
+                            <img src="assets\images\users\avatar2.jpeg" alt="user-image" class="avtar object-fit-cover"
                                 data-bs-toggle="tooltip" data-bs-title="Keefs">
-                            <img src="assets\images\users\avatar3.jpeg" alt="user-image" class="avtar"
+                            <img src="assets\images\users\avatar3.jpeg" alt="user-image" class="avtar object-fit-cover"
                                 data-bs-toggle="tooltip" data-bs-title="Lazaro">
                         </div>
                     </div>
@@ -197,13 +197,13 @@
                         <p class="text-sm">Instagram, Twitter, Facebook</p>
                         <span class="text-sm text-muted">50 Results</span>
                         <div class="user-group d-inline">
-                            <img src="assets\images\users\avatar4.jpeg" alt="user-image" class="avtar"
+                            <img src="assets\images\users\avatar4.jpeg" alt="user-image" class="avtar object-fit-cover"
                                 data-bs-toggle="tooltip" data-bs-title="John Doe">
-                            <img src="assets\images\users\avatar3.jpeg" alt="user-image" class="avtar"
+                            <img src="assets\images\users\avatar3.jpeg" alt="user-image" class="avtar object-fit-cover"
                                 data-bs-toggle="tooltip" data-bs-title="Keefs">
-                            <img src="assets\images\users\avatar2.jpeg" alt="user-image" class="avtar"
+                            <img src="assets\images\users\avatar2.jpeg" alt="user-image" class="avtar object-fit-cover"
                                 data-bs-toggle="tooltip" data-bs-title="Lazaro">
-                            <img src="assets\images\users\avatar1.jpeg" alt="user-image" class="avtar"
+                            <img src="assets\images\users\avatar1.jpeg" alt="user-image" class="avtar object-fit-cover"
                                 data-bs-toggle="tooltip" data-bs-title="Adeline">
                         </div>
                     </div>
@@ -218,13 +218,13 @@
                         <p class="text-sm">Twitter</p>
                         <span class="text-sm text-muted">12 Results</span>
                         <div class="user-group d-inline">
-                            <img src="assets\images\users\avatar3.jpeg" alt="user-image" class="avtar"
+                            <img src="assets\images\users\avatar3.jpeg" alt="user-image" class="avtar object-fit-cover"
                                 data-bs-toggle="tooltip" data-bs-title="John Doe">
-                            <img src="assets\images\users\avatar1.jpeg" alt="user-image" class="avtar"
+                            <img src="assets\images\users\avatar1.jpeg" alt="user-image" class="avtar object-fit-cover"
                                 data-bs-toggle="tooltip" data-bs-title="Keefs">
-                            <img src="assets\images\users\avatar4.jpeg" alt="user-image" class="avtar"
+                            <img src="assets\images\users\avatar4.jpeg" alt="user-image" class="avtar object-fit-cover"
                                 data-bs-toggle="tooltip" data-bs-title="Lazaro">
-                            <img src="assets\images\users\avatar2.jpeg" alt="user-image" class="avtar"
+                            <img src="assets\images\users\avatar2.jpeg" alt="user-image" class="avtar object-fit-cover"
                                 data-bs-toggle="tooltip" data-bs-title="Adeline">
                         </div>
                     </div>
