--- a/ini's conversion/vision-board.html
+++ b/ini's conversion/vision-board.html
@@ -738,7 +738,7 @@
               </div>
             </div>
           </div></div></div></div><div class="simplebar-placeholder" style="width: 280px; height: 3138px;"></div></div><div class="simplebar-track simplebar-horizontal" style="visibility: hidden;"><div class="simplebar-scrollbar" style="width: 0px; display: none;"></div></div><div class="simplebar-track simplebar-vertical" style="visibility: visible;"><div class="simplebar-scrollbar" style="height: 25px; transform: translate3d(0px, 0px, 0px); display: block;"></div></div></div>
-          <div class="card pc-user-card">
+          <div class="card pc-user-card border-top-0">
             <div class="card-body">
               <div class="d-flex align-items-center">
                 <button class="btn btn-primary fw-bold col">New Search</button>
